# strawx

./: .gitignore  CMakeLists.txt  README.md  engine.cc  engine.cmake  engine.h  engine.hpp  main.cc  main.cpp  strawx.cmake
core/: engine.cpp  engine.spec.h  engine_spec.h  handler.cpp  handler.h  input.cpp  input.h  input_handler.cpp  input_handler.h  texture.cpp  texture.h
strawx/: engine.cc  engine.h  strawx.cmake
strawx/core/: common.h  input.h  texture.cc  texture.h
sub_system/: common.h  input.cc  input.h  input_impl.cc  texture.cc  texture.h  texture_impl.cc
sub_system/shared/: spec__c.h
util/: vector_2d.h
